2006-09-05  Mark D. Baushke  <mdb@gnu.org>

	* validate_repo.pl (look_at_cvs_file): Check for head being in
	state 'dead' outside the Attic and not dead inside the Attic.
	(get_history): Remember the head revision for later use.
	(Problem report from <David.Carter-Hitchin@rbos.com>.) 
	
2006-08-16  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, pam/Makefile.in: Regenerated.

2006-08-04  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Use function prototypes for constants.  Require 5.002.

2006-08-03  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Avoid `use constant' - it requires Perl 5.8.
	(Suggested by Mark D. Baushke <mdb@gnu.org>.)

	* log_accum.pl: Change --debug_file to --debug-log or --debug-file, for
	readability and consistency.

	* log_accum.pl: Use proper Perl constants.

	* log_accum.pl (get_topdir): Don't assume the directory list will be
	ordered by increasing path length.

	* log_accum.pl (debug): New function.
	(option_spec): Parse debug log names.
	(set_defaults): Open debug log files.
	(*): Update to compensate.

	* log_accum.pl (get_topdir): Quote file name in debug output.

2006-07-24  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Actually remove temporary files.  Sanity check that
	commit_prep ran first, exiting if not, as documented.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-26  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (compile_subject): Keep slashes in paths.

	* log_accum.pl: Shrink attributions, referring reader to ChangeLog.
	(write_file): Create empty files.
	(cleanup_tmpfiles): Fix regexp & untaint result before deleting.
	(main): Don't worry about empty log files.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-07  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (set_defaults): Don't dereference undefined value.
	(process_stdin): Handle dashes in tag names.

	* log_accum.pl (main): Fix branch filter.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)
